--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvguideprovider-scd.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvguideprovider-scd.html
@@ -53,6 +53,14 @@
                         <div>
                             <div>
                                 <br />
+                                <label for="selectCountry">${LabelCountry}</label>
+                                <select id="selectCountry" data-mini="true" required="required">
+                                    <option value="ca">Canada</option>
+                                    <option value="us" selected>United States</option>
+                                </select>
+                            </div>
+                            <div>
+                                <br />
                                 <label for="txtZipCode">${LabelZipCode}</label>
                                 <input type="text" id="txtZipCode" required="required" />
                             </div>
