--- a/MediaBrowser.WebDashboard/dashboard-ui/shared.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/shared.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="publicSharedItemPage" data-role="page" class="page standalonePage noSecondaryNavPage" data-theme="b" data-require="scripts/shared,scripts/itemdetailpage,paperbuttonstyle,tileitemcss">
+    <div id="publicSharedItemPage" data-role="page" class="page standalonePage noSecondaryNavPage" data-theme="b" data-require="scripts/shared,scripts/itemdetailpage,paperbuttonstyle,tileitemcss,scripts/livetvcomponents">
 
         <style>
             #publicSharedItemPage .header {
@@ -21,58 +21,77 @@
 
         <div id="itemBackdrop" class="itemBackdrop noBackdrop">
             <div class="itemBackdropContent">
-
-                <div class="detailPageContent primaryDetailPageContent backdropDetailPageContent">
-
-                    <div class="detailImageContainer">
-                    </div>
-
-                    <div class="detailContentEffectedByImage">
-                        <p><span class="parentName"></span><span class="itemName inlineItemName"></span><span class="itemMiscInfo" style="display: inline;"></span></p>
-                        <p style="margin:1.1em 0">
-                            <span class="itemCommunityRating"></span>
-                        </p>
-                    </div>
-                </div>
-
             </div>
         </div>
 
-        <div data-role="content">
-            <div class="detailPageContent">
+        <div class="detailPageContent" style="position:relative;">
 
-                <div class="detailSection" style="margin-bottom:1.5em;">
-                    <div class="detailSectionContent detailContentEffectedByImage lastDetailContentEffectedByImage">
+            <paper-fab class="btnPlay detailFloatingButton hide" icon="play-arrow" title="${ButtonPlay}"></paper-fab>
+            <paper-fab class="btnFloatingRecord detailFloatingButton hide" icon="videocam" title="${ButtonRecord}"></paper-fab>
 
-                        <p id="artist"></p>
-                        <p class="itemGenres"></p>
-                        <p class="itemOverview smoothScrollY"></p>
-                        <p id="seriesAirTime"></p>
+            <div class="detailImageContainer">
+            </div>
+            <div class="primaryDetailsContainer">
+                <div class="detailNameContainer">
+                    <div><span class="parentName"></span><span class="itemName inlineItemName"></span></div>
+                    <div class="desktopDetails" style="margin-top:1em;">
+
+                        <span class="itemMiscInfo"></span>
+                        <span class="itemCommunityRating" style="margin-left:1em;"></span>
                     </div>
                 </div>
-                <br />
-                <br />
-                <br />
-                <div id="castCollapsible" style="display: none;" class="detailSection">
-                    <div id="peopleHeader" class="detailSectionHeader">
-                        ${HeaderCastCrew}
+                <div class="desktopDetails" style="padding-top:5px;">
+
+                    <p class="artist"></p>
+                    <p class="itemGenres"></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="mobileDetails" style="text-align:center;clear:both;">
+            <div style="height:10px;"></div>
+            <div>
+                <span class="itemMiscInfo"></span>
+                <span class="itemCommunityRating" style="margin-left:1em;"></span>
+            </div>
+        </div>
+
+        <div data-role="content" style="padding-top:0;clear:both;">
+            <div class="detailPageContent">
+
+                <div class="detailSection">
+                    <div class="mobileDetails">
+                        <p class="artist"></p>
+                        <p class="itemGenres"></p>
                     </div>
-                    <div id="castContent" class="detailSectionContent"></div>
+                    <h2 class="tagline"></h2>
+                    <p id="itemBirthday"></p>
+                    <p id="itemBirthLocation"></p>
+                    <p id="itemDeathDate"></p>
+                    <p id="seriesAirTime"></p>
+                    <p class="airDate"></p>
+                    <p class="itemOverview smoothScrollY"></p>
+                </div>
+                <div id="castCollapsible" style="display: none;" class="detailSection">
+                    <h1 id="peopleHeader">
+                        ${HeaderCastCrew}
+                    </h1>
+                    <div id="castContent"></div>
                 </div>
 
                 <div class="detailSection photoInfo hide">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderPhotoInfo}
-                    </div>
-                    <div class="detailSectionContent" style="padding:1em;">
+                    </h1>
+                    <div>
                         <div class="photoInfoContent"></div>
                     </div>
                 </div>
                 <div id="criticReviewsCollapsible" style="display: none;" class="detailSection">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderAwardsAndReviews}
-                    </div>
-                    <div style="padding: 0 .5em;">
+                    </h1>
+                    <div>
                         <p id="awardSummary"></p>
                         <div id="criticRatingSummary" class="criticReview criticRatingSummary" style="display: none;">
                             <p style="margin: 0 0 .5em -40px; font-weight: bold;">TOMATOMETER®</p>
@@ -82,36 +101,34 @@
                             <div class="criticRatingScore"></div>
                             <div class="criticRatingSummaryText"></div>
                         </div>
-                        <div id="criticReviewsContent" class="detailSectionContent"></div>
+                        <div id="criticReviewsContent"></div>
                     </div>
                 </div>
                 <div class="detailSection detailsSection">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderDetails}
-                    </div>
-                    <div class="detailSectionContent" style="padding:0 1em;">
+                    </h1>
+                    <div>
                         <div class="tabDetails">
                             <p id="players"></p>
-                            <p id="itemBudget"></p>
-                            <p id="itemRevenue"></p>
                             <p class="itemExternalLinks"></p>
                             <p class="itemStudios"></p>
-                            <p class="itemKeywords"></p>
                             <p class="itemTags"></p>
                         </div>
                     </div>
                 </div>
 
                 <div id="scenesCollapsible" style="display: none;" class="detailSection">
-                    <div class="detailSectionHeader">
+                    <h1>
                         ${HeaderScenes}
-                    </div>
-                    <div id="scenesContent" class="detailSectionContent smallItemsContainer"></div>
+                        <a class="detailSectionHeaderButton chapterSettingsButton clearLink" style="margin-top:-8px;display:inline-block;" href="metadataadvanced.html" title="${ButtonSettings}" style="display:none;"><paper-icon-button icon="settings"></paper-icon-button></a>
+                    </h1>
+                    <div id="scenesContent" class="smallItemsContainer"></div>
                 </div>
 
                 <div class="detailSection audioVideoMediaInfo hide">
-                    <h2 class="detailSectionHeader">${HeaderMediaInfo}</h2>
-                    <div class="detailSectionContent" style="padding: 0 .7em;">
+                    <h1>${HeaderMediaInfo}</h1>
+                    <div>
                         <div id="mediaInfoContent" class="mediaInfoContent"></div>
                     </div>
                 </div>
