--- a/MediaBrowser.WebDashboard/dashboard-ui/musicrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/musicrecommended.html
@@ -4,46 +4,156 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="musicRecommendedPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="musicartist" data-require="scripts/musicrecommended">
-        <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="#" class="ui-btn-active"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
-            <a href="musicalbums.html"><iron-icon icon="album"></iron-icon>${TabAlbums}</a>
-            <a href="musicalbumartists.html"><iron-icon icon="music-note"></iron-icon>${TabAlbumArtists}</a>
-            <a href="musicartists.html" class="musicArtistsTab"><iron-icon icon="music-note"></iron-icon>${TabArtists}</a>
-            <a href="songs.html" class="musicSongsTab"><iron-icon icon="music-note"></iron-icon>${TabSongs}</a>
-            <a href="musicgenres.html"><iron-icon icon="library-music"></iron-icon>${TabGenres}</a>
-        </div>
-        <div data-role="content">
-            <div class="ehsContent squareEhsContent">
-
-                <div class="homePageSection">
-                    <h1 class="listHeader">${HeaderLatestMusic}</h1>
-
-                    <div id="recentlyAddedSongs" class="itemsContainer fullWidthItemsContainer" style="text-align:left;">
-                    </div>
-                </div>
-
-                <div id="playlists" style="display: none;" class="homePageSection">
-                    <h1 class="listHeader">${HeaderPlaylists}</h1>
-
-                    <div class="itemsContainer fullWidthItemsContainer" style="text-align:left;">
-                    </div>
-                </div>
-
-                <div id="recentlyPlayed" style="display: none;" class="homePageSection">
-                    <h1 class="listHeader">${HeaderRecentlyPlayed}</h1>
-
-                    <div id="recentlyPlayedSongs" class="itemsContainer fullWidthItemsContainer" style="text-align:left;">
-                    </div>
-                </div>
-
-                <div id="topPlayed" style="display: none;" class="homePageSection">
-                    <h1 class="listHeader">${HeaderFrequentlyPlayed}</h1>
-
-                    <div id="topPlayedSongs" class="itemsContainer fullWidthItemsContainer" style="text-align:left;">
-                    </div>
-                </div>
+    <div id="musicRecommendedPage" data-role="page" class="page libraryPage backdropPage pageWithAbsoluteTabs" data-backdroptype="musicartist" data-require="scripts/musicrecommended">
+        <div class="libraryViewNav libraryViewNavWithMinHeight">
+            <paper-tabs hidescrollbuttons noink>
+                <paper-tab><iron-icon icon="info"></iron-icon>${TabSuggestions}</paper-tab>
+                <paper-tab><iron-icon icon="local-movies"></iron-icon>${TabMovies}</paper-tab>
+                <paper-tab class="movieTrailersTab"><iron-icon icon="movie"></iron-icon>${TabTrailers}</paper-tab>
+                <paper-tab><iron-icon icon="video-library"></iron-icon>${TabCollections}</paper-tab>
+                <paper-tab><iron-icon icon="video-library"></iron-icon>${TabGenres}</paper-tab>
+                <paper-tab class="moviePeopleTab"><iron-icon icon="people"></iron-icon>${TabPeople}</paper-tab>
+            </paper-tabs>
+            <div class="legacyTabs scopedLibraryViewNav">
+                <a href="musicrecommended.html"><iron-icon icon="info"></iron-icon>${TabSuggestions}</a>
+                <a href="musicrecommended.html?tab=1"><iron-icon icon="album"></iron-icon>${TabAlbums}</a>
+                <a href="musicrecommended.html?tab=2"><iron-icon icon="music-note"></iron-icon>${TabAlbumArtists}</a>
+                <a href="musicrecommended.html?tab=3"><iron-icon icon="music-note"></iron-icon>${TabArtists}</a>
+                <a href="musicrecommended.html?tab=4"><iron-icon icon="music-note"></iron-icon>${TabSongs}</a>
+                <a href="musicrecommended.html?tab=5"><iron-icon icon="library-music"></iron-icon>${TabGenres}</a>
             </div>
+        </div>
+
+        <div class="pageBackground"></div>
+
+        <div class="ehsContent fullWidth">
+
+            <neon-animated-pages>
+                <neon-animatable>
+                    <div class="pageTabContent" data-index="0">
+                        <div class="homePageSection">
+                            <h1 class="listHeader">${HeaderLatestMusic}</h1>
+
+                            <div id="recentlyAddedSongs" class="itemsContainer fullWidthItemsContainer" style="text-align:left;">
+                            </div>
+                        </div>
+
+                        <div id="playlists" style="display: none;" class="homePageSection">
+                            <h1 class="listHeader">${HeaderPlaylists}</h1>
+
+                            <div class="itemsContainer fullWidthItemsContainer" style="text-align:left;">
+                            </div>
+                        </div>
+
+                        <div id="recentlyPlayed" style="display: none;" class="homePageSection">
+                            <h1 class="listHeader">${HeaderRecentlyPlayed}</h1>
+
+                            <div id="recentlyPlayedSongs" class="itemsContainer fullWidthItemsContainer" style="text-align:left;">
+                            </div>
+                        </div>
+
+                        <div id="topPlayed" style="display: none;" class="homePageSection">
+                            <h1 class="listHeader">${HeaderFrequentlyPlayed}</h1>
+
+                            <div id="topPlayedSongs" class="itemsContainer fullWidthItemsContainer" style="text-align:left;">
+                            </div>
+                        </div>
+                    </div>
+                </neon-animatable>
+                <neon-animatable>
+                    <div class="pageTabContent" data-index="1">
+                    </div>
+                </neon-animatable>
+                <neon-animatable>
+                    <div class="pageTabContent" data-index="2">
+                    </div>
+                </neon-animatable>
+                <neon-animatable>
+                    <div class="pageTabContent" data-index="3">
+                    </div>
+                </neon-animatable>
+                <neon-animatable>
+                    <div class="pageTabContent" data-index="4">
+                        <div class="viewSettings">
+                            <div class="listTopPaging">
+                            </div>
+                        </div>
+                        <div id="items" class="itemsContainer" style="max-width:1000px;margin: 0 auto;"></div>
+                    </div>
+                </neon-animatable>
+                <neon-animatable>
+                    <div class="pageTabContent" data-index="5">
+                        <div class="viewSettings">
+                            <div class="listTopPaging">
+                            </div>
+                            <div class="selectionCommands" style="display: none;">
+                                <div class="selectionCommandsControlGroup">
+                                    <button class="btnAddToPlaylist" data-mini="true" data-icon="plus" data-inline="true" title="${ButtonAddToPlaylist}">${ButtonAddToPlaylist}</button>
+                                    <button class="btnSyncItems" data-mini="true" data-icon="refresh" data-inline="true" title="${ButtonSync}">${ButtonSync}</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="items" class="itemsContainer paddedItemsContainer"></div>
+                    </div>
+                </neon-animatable>
+            </neon-animated-pages>
+        </div>
+
+        <div data-role="panel" class="viewPanel songsViewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
+            <form>
+
+                <fieldset data-role="controlgroup">
+                    <legend>${HeaderFilters}</legend>
+                    <input class="chkStandardFilter" type="checkbox" name="chkPlayed" id="chkPlayed" data-filter="IsPlayed" data-mini="true">
+                    <label for="chkPlayed">${OptionPlayed}</label>
+
+                    <input class="chkStandardFilter" type="checkbox" name="chkUnplayed" id="chkUnplayed" data-filter="IsUnPlayed" data-mini="true">
+                    <label for="chkUnplayed">${OptionUnplayed}</label>
+
+                    <input class="chkStandardFilter" type="checkbox" name="chkIsFavorite" id="chkIsFavorite" data-filter="IsFavorite" data-mini="true">
+                    <label for="chkIsFavorite">${OptionFavorite}</label>
+
+                    <input class="chkStandardFilter" type="checkbox" name="chkLikes" id="chkLikes" data-filter="Likes" data-mini="true">
+                    <label for="chkLikes">${OptionLikes}</label>
+
+                    <input class="chkStandardFilter" type="checkbox" name="chkDislikes" id="chkDislikes" data-filter="Dislikes" data-mini="true">
+                    <label for="chkDislikes">${OptionDislikes}</label>
+
+                </fieldset>
+                <br />
+
+                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="genreFilters">
+                    <h2>${HeaderGenres}</h2>
+
+                    <div class="filterOptions">
+                    </div>
+                </div>
+
+                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="officialRatingFilters">
+                    <h2>${HeaderParentalRatings}</h2>
+
+                    <div class="filterOptions">
+                    </div>
+                </div>
+
+                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="tagFilters">
+                    <h2>${HeaderTags}</h2>
+
+                    <div class="filterOptions">
+                    </div>
+                </div>
+
+                <div data-role="collapsible" data-collapsed="true" data-mini="true" class="yearFilters">
+                    <h2>${HeaderYears}</h2>
+
+                    <div class="filterOptions">
+                    </div>
+                </div>
+
+            </form>
+        </div>
+
+        <div data-role="content">
         </div>
     </div>
 </body>
